v2/deploy/face-detect-all-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: start
 labels:
  app: start
spec:
 replicas: 1
 selector:
  matchLabels:
   app: start
 template:
  metadata:
   labels:
    app: start
  spec:
   containers:
   - name: start
     image: start:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: start
spec:
 selector:
  app: start
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: member-check
 labels:
  app: member-check
spec:
 replicas: 1
 selector:
  matchLabels:
   app: member-check
 template:
  metadata:
   labels:
    app: member-check
  spec:
   containers:
   - name: member-check
     image: member-check:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: member-check
spec:
 selector:
  app: member-check
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: face-detection
 labels:
  app: face-detection
spec:
 replicas: 1
 selector:
  matchLabels:
   app: face-detection
 template:
  metadata:
   labels:
    app: face-detection
  spec:
   containers:
   - name: face-detection
     image: face-detection:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: face-detection
spec:
 selector:
  app: face-detection
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: face-feature-extractor
 labels:
  app: face-feature-extractor
spec:
 replicas: 1
 selector:
  matchLabels:
   app: face-feature-extractor
 template:
  metadata:
   labels:
    app: face-feature-extractor
  spec:
   containers:
   - name: face-feature-extractor
     image: face-feature-extractor:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: face-feature-extractor
spec:
 selector:
  app: face-feature-extractor
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: membera
 labels:
  app: membera
spec:
 replicas: 1
 selector:
  matchLabels:
   app: membera
 template:
  metadata:
   labels:
    app: membera
  spec:
   containers:
   - name: membera
     image: membera:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: membera
spec:
 selector:
  app: membera
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: memberb
 labels:
  app: memberb
spec:
 replicas: 1
 selector:
  matchLabels:
   app: memberb
 template:
  metadata:
   labels:
    app: memberb
  spec:
   containers:
   - name: memberb
     image: memberb:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: memberb
spec:
 selector:
  app: memberb
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ai-model-repository
 labels:
  app: ai-model-repository
spec:
 replicas: 1
 selector:
  matchLabels:
   app: ai-model-repository
 template:
  metadata:
   labels:
    app: ai-model-repository
  spec:
   containers:
   - name: ai-model-repository
     image: ai-model-repository:1.0
     imagePullPolicy: Never
     ports:
     - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
 name: ai-model-repository
spec:
 selector:
  app: ai-model-repository
 ports:
 - name: http
   protocol: TCP
   port: 5000
   targetPort: 5000
---
